--- a/Bybit_test3.ipynb
+++ b/Bybit_test3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -15,18 +15,11 @@
     {
      "data": {
       "text/plain": [
-       "'ROI: 16.107039151682738 % time=>2024-10-17 23:45:47.427134'"
+       "'ROI: -9.649102162811452 % time=>2024-10-18 00:00:09.327949'"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "平倉 {'retCode': 0, 'retMsg': 'OK', 'result': {'orderId': '0ba44f05-0fe4-4076-b23d-5c8e81f4b310', 'orderLinkId': ''}, 'retExtInfo': {}, 'time': 1729179948636}\n"
-     ]
     }
    ],
    "source": [
@@ -37,21 +30,7 @@
     "from pybit.unified_trading import HTTP\n",
     "from datetime import datetime, timezone\n",
     "from Sdata import bybitkey,bybit_Secret\n",
-    "# 初始化 Bybit 会话\n",
-    "session = HTTP(\n",
-    "    testnet=False,\n",
-    "    api_key=bybitkey,\n",
-    "    api_secret=bybit_Secret\n",
-    ")\n",
-    "# 資料庫連接參數\n",
-    "db_params = {\n",
-    "    \"host\": \"123.241.217.251\",\n",
-    "    \"database\": \"mydatabase\",\n",
-    "    \"user\": \"myuser\",\n",
-    "    \"password\": \"mysecretpassword\",\n",
-    "    \"port\": \"5432\"\n",
-    "}\n",
-    "trad_types = ['Buy','Sell']\n",
+    "\n",
     "# 連接資料庫\n",
     "def connect_to_db():\n",
     "    try:\n",
@@ -73,20 +52,16 @@
     "    except (Exception, psycopg2.Error) as error:\n",
     "        print(\"執行時出錯:\", error)\n",
     "\n",
-    "symbol = \"ETHUSDT\"\n",
-    "min_qty = 0.01  # 最小下單數量\n",
-    "print('init processing...')\n",
-    "output = display(\"start trading...\", display_id=True)\n",
     "\n",
     "def close_all_position(trad_type):\n",
     "    if trad_type == 'Buy':\n",
     "        trad_type = 'Sell'\n",
     "    else:\n",
     "        trad_type = 'Buy'\n",
-    "    positions = session.get_positions(category=\"linear\", symbol=\"ETHUSDT\")\n",
+    "    positions = session.get_positions(category=\"linear\", symbol=\"PENDLEUSDT\")\n",
     "    response = session.place_order(\n",
     "    category=\"linear\",  # 或 \"inverse\"，根據合約類型設定\n",
-    "    symbol=\"ETHUSDT\",\n",
+    "    symbol=\"PENDLEUSDT\",\n",
     "    side=trad_type,  # 平掉多單的方向為 \"Sell\"\n",
     "    orderType=\"Market\",\n",
     "    qty=positions['result']['list'][0]['size'],\n",
@@ -166,7 +141,7 @@
     "\n",
     "def input_db_trading_data():\n",
     "    conn = connect_to_db()\n",
-    "    positions = session.get_positions(category=\"linear\", symbol=\"ETHUSDT\")\n",
+    "    positions = session.get_positions(category=\"linear\", symbol=\"PENDLEUSDT\")\n",
     "\n",
     "    symbol= positions['result']['list'][0]['symbol']\n",
     "    PositionIM= positions['result']['list'][0]['positionIM'] \n",
@@ -196,7 +171,26 @@
     "        conn.close()\n",
     "        \n",
     "if __name__ == \"__main__\":\n",
-    "    trading_strategy(trad_types[1])"
+    "    # 初始化 Bybit 会话\n",
+    "    session = HTTP(\n",
+    "        testnet=False,\n",
+    "        api_key=bybitkey,\n",
+    "        api_secret=bybit_Secret\n",
+    "    )\n",
+    "    # 資料庫連接參數\n",
+    "    db_params = {\n",
+    "        \"host\": \"123.241.217.251\",\n",
+    "        \"database\": \"mydatabase\",\n",
+    "        \"user\": \"myuser\",\n",
+    "        \"password\": \"mysecretpassword\",\n",
+    "        \"port\": \"5432\"\n",
+    "    }\n",
+    "    trad_types = ['Buy','Sell']\n",
+    "    symbol = \"PENDLEUSDT\"\n",
+    "    min_qty = 2  # 最小下單數量\n",
+    "    print('init processing...')\n",
+    "    output = display(\"start trading...\", display_id=True)\n",
+    "    trading_strategy(trad_types[0])"
    ]
   }
  ],
