--- a/Bybit_test2.ipynb
+++ b/Bybit_test2.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "text/plain": [
-       "'ROI: 64.0278557987192 %'"
+       "'ROI: 18.738316044133704 % time=>2024-10-19 19:58:49.737969'"
       ]
      },
      "metadata": {},
@@ -25,6 +25,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "下單成功: Sell 0.001 BTCUSDT\n",
+      "平倉 {'retCode': 0, 'retMsg': 'OK', 'result': {'orderId': '1d2edbaa-1ef9-4283-84d6-438071bc7b37', 'orderLinkId': ''}, 'retExtInfo': {}, 'time': 1729252284315}\n",
+      "下單成功: Sell 0.001 BTCUSDT\n",
+      "Order puls Sell 2024-10-18 22:00:13.428675\n",
+      "下單成功: Sell 0.001 BTCUSDT\n",
+      "Order puls Sell 2024-10-18 22:09:38.817832\n",
+      "下單成功: Sell 0.001 BTCUSDT\n",
+      "平倉 {'retCode': 0, 'retMsg': 'OK', 'result': {'orderId': 'b464baf0-82ff-41aa-8af8-780da3a15bc3', 'orderLinkId': ''}, 'retExtInfo': {}, 'time': 1729260924046}\n",
+      "下單成功: Sell 0.001 BTCUSDT\n",
+      "Order puls Sell 2024-10-18 22:34:00.792055\n",
+      "下單成功: Sell 0.001 BTCUSDT\n",
+      "Order puls Sell 2024-10-18 23:30:56.592614\n",
+      "下單成功: Sell 0.001 BTCUSDT\n",
+      "Order puls Sell 2024-10-19 02:37:10.839408\n",
+      "下單成功: Sell 0.001 BTCUSDT\n",
+      "平倉 {'retCode': 0, 'retMsg': 'OK', 'result': {'orderId': '6382a8a6-6c00-46dc-88e1-45af10e9ac22', 'orderLinkId': ''}, 'retExtInfo': {}, 'time': 1729283916418}\n",
+      "下單成功: Sell 0.001 BTCUSDT\n",
+      "平倉 {'retCode': 0, 'retMsg': 'OK', 'result': {'orderId': '4fe86917-607d-49bc-b899-07125ce965cd', 'orderLinkId': ''}, 'retExtInfo': {}, 'time': 1729288375096}\n",
       "下單成功: Sell 0.001 BTCUSDT\n"
      ]
     }
@@ -32,6 +50,8 @@
    "source": [
     "from IPython.display import clear_output,display, update_display\n",
     "import time\n",
+    "import psycopg2\n",
+    "from psycopg2 import sql\n",
     "from pybit.unified_trading import HTTP\n",
     "from datetime import datetime, timezone\n",
     "from Sdata import bybitkey,bybit_Secret\n",
@@ -41,7 +61,35 @@
     "    api_key=bybitkey,\n",
     "    api_secret=bybit_Secret\n",
     ")\n",
+    "# 資料庫連接參數\n",
+    "db_params = {\n",
+    "    \"host\": \"123.241.217.251\",\n",
+    "    \"database\": \"mydatabase\",\n",
+    "    \"user\": \"myuser\",\n",
+    "    \"password\": \"mysecretpassword\",\n",
+    "    \"port\": \"5432\"\n",
+    "}\n",
+    "trad_types = ['Buy','Sell']\n",
+    "# 連接資料庫\n",
+    "def connect_to_db():\n",
+    "    try:\n",
+    "        conn = psycopg2.connect(**db_params)\n",
+    "        return conn\n",
+    "    except (Exception, psycopg2.Error) as error:\n",
+    "        print(\"連接資料庫時出錯:\", error)\n",
+    "        return None\n",
     "\n",
+    "# 執行查詢\n",
+    "def execute_query(conn, query, params=None):\n",
+    "    try:\n",
+    "        with conn.cursor() as cur:\n",
+    "            if params:\n",
+    "                cur.execute(query, params)\n",
+    "            else:\n",
+    "                cur.execute(query)\n",
+    "            conn.commit()\n",
+    "    except (Exception, psycopg2.Error) as error:\n",
+    "        print(\"執行時出錯:\", error)\n",
     "symbol = \"BTCUSDT\"\n",
     "min_qty = 0.001  # 最小下單數量 根據交易對調整\n",
     "print('init processing...')\n",
@@ -51,17 +99,24 @@
     "    clear_output(wait=True)\n",
     "    print(message)\n",
     "\n",
-    "def close_all_position():\n",
+    "def close_all_position(trad_type):\n",
     "    positions = session.get_positions(category=\"linear\", symbol=\"BTCUSDT\")\n",
+    "    Idx = 1\n",
+    "    if trad_type == 'Sell':\n",
+    "        Idx = 2\n",
+    "    if trad_type == 'Buy':\n",
+    "        trad_type = 'Sell'\n",
+    "    else:\n",
+    "        trad_type = 'Buy'\n",
     "    response = session.place_order(\n",
     "    category=\"linear\",  # 或 \"inverse\"，根據合約類型設定\n",
     "    symbol=\"BTCUSDT\",\n",
-    "    side=\"Sell\",  # 平掉多單的方向為 \"Sell\"\n",
+    "    side=trad_type,  # 平掉多單的方向為 \"Sell\"\n",
     "    orderType=\"Market\",\n",
     "    qty=positions['result']['list'][0]['size'],\n",
     "    reduceOnly=True,  # 設定為 True 確保這是一個平倉訂單\n",
     "    timeInForce=\"GTC\",  # Good Till Cancel\n",
-    "    positionIdx=1,\n",
+    "    positionIdx=Idx,\n",
     "    )\n",
     "    return response\n",
     "\n",
@@ -89,12 +144,15 @@
     "        print(f\"獲取持倉資訊失敗: {e}\")\n",
     "        return None\n",
     "\n",
-    "def calculate_roi(position):\n",
+    "def calculate_roi(position,trad_type):\n",
+    "    mode = 1\n",
+    "    if trad_type == 'Buy':\n",
+    "        mode = -1\n",
     "    entry_price = float(position['avgPrice'])\n",
     "    current_price = float(position['markPrice'])\n",
-    "    return (entry_price - current_price) / entry_price * 100 #*-1 #*-1代表作多\n",
+    "    return (entry_price - current_price) / entry_price * 100 *mode #*-1代表作多\n",
     "\n",
-    "def trading_strategy():\n",
+    "def trading_strategy(trad_type):\n",
     "    while True:\n",
     "        position = get_position()\n",
     "        if position is None:\n",
@@ -104,31 +162,63 @@
     "        \n",
     "        if size == 0:\n",
     "            # if not order，start treading (small_order)\n",
-    "            place_order(\"Sell\", min_qty)\n",
+    "            place_order(trad_type, min_qty)\n",
+    "            input_db_trading_data()\n",
     "        else:\n",
-    "            roi = calculate_roi(position) * 100\n",
+    "            roi = calculate_roi(position,trad_type) * 100\n",
     "            # print(f'ROI: {roi} %')\n",
     "            # print_with_clear(f'ROI: {roi} %')\n",
-    "            update_display(f'ROI: {roi} %', display_id=output.display_id)\n",
+    "            update_display(f'ROI: {roi} % time=>{datetime.now()}', display_id=output.display_id)\n",
     "            time.sleep(1)\n",
-    "            if roi >= 2000:\n",
+    "            if roi >= 20:\n",
     "                # ROI == 20%，平倉重新開始\n",
     "                # place_order(\"Buy\", size)\n",
     "                # print('Order Buy')\n",
     "                # time.sleep(1)  # 等待 order 執行\n",
     "                # place_order(\"Sell\", min_qty)\n",
     "                # print('Order Sell')\n",
-    "                ans = close_all_position()\n",
+    "                ans = close_all_position(trad_type)\n",
     "                print('平倉',ans)\n",
     "            elif roi <= -75:\n",
-    "                print('Order puls Sell')\n",
+    "                print(f'Order puls {trad_type}',datetime.now())\n",
     "                # ROI == -50%，加倉\n",
-    "                place_order(\"Sell\", min_qty)\n",
+    "                place_order(trad_type, min_qty)\n",
+    "                input_db_trading_data()\n",
     "    \n",
     "        # time.sleep(5)  # 每 5 秒更新 output\n",
+    "def input_db_trading_data():\n",
+    "    conn = connect_to_db()\n",
+    "    positions = session.get_positions(category=\"linear\", symbol=\"BTCUSDT\")\n",
     "\n",
+    "    symbol= positions['result']['list'][0]['symbol']\n",
+    "    PositionIM= positions['result']['list'][0]['positionIM'] \n",
+    "    Leverage= positions['result']['list'][0]['leverage']\n",
+    "    markPrice= positions['result']['list'][0]['markPrice'] \n",
+    "    AvgPrice= positions['result']['list'][0]['avgPrice'] \n",
+    "    Size= positions['result']['list'][0]['size']\n",
+    "    Side= positions['result']['list'][0]['side']\n",
+    "    CurRealisedPnl= positions['result']['list'][0]['curRealisedPnl'] \n",
+    "    PositionValue= positions['result']['list'][0]['positionValue'] \n",
+    "    createdTime= datetime.fromtimestamp(int(positions['result']['list'][0]['updatedTime']) / 1000, timezone.utc).astimezone().strftime('%Y-%m-%d %H:%M:%S')\n",
+    "    Time= datetime.fromtimestamp(int(positions['time']) / 1000, timezone.utc).astimezone().strftime('%Y-%m-%d %H:%M:%S')\n",
+    "    if conn:\n",
+    "        insert_query = sql.SQL(\"\"\"\n",
+    "        INSERT INTO sptd.tdata \n",
+    "        (symbol, asset, leverage, buy_price, sell_price, quantity, transaction_type, CurRealisedPnl, PositionValue, create_transaction_time, transaction_time)\n",
+    "        VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s)\n",
+    "        \"\"\")\n",
+    "        \n",
+    "        params = (\n",
+    "            symbol, PositionIM, Leverage, markPrice, AvgPrice, Size, Side, \n",
+    "            CurRealisedPnl, PositionValue, createdTime, Time\n",
+    "        )\n",
+    "        \n",
+    "        execute_query(conn, insert_query, params)\n",
+    "\n",
+    "        conn.close()\n",
+    "#trad_type => 0:Buy 1:Sell\n",
     "if __name__ == \"__main__\":\n",
-    "    trading_strategy()"
+    "    trading_strategy(trad_types[1])"
    ]
   }
  ],
