add api put test

--- a/Bybit_test2.ipynb
+++ b/Bybit_test2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -15,7 +15,7 @@
     {
      "data": {
       "text/plain": [
-       "'ROI: 18.738316044133704 % time=>2024-10-19 19:58:49.737969'"
+       "'ROI: -4.395338639209685 % time=>2024-10-20 23:00:33.050492'"
       ]
      },
      "metadata": {},
@@ -25,24 +25,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "下單成功: Sell 0.001 BTCUSDT\n",
-      "平倉 {'retCode': 0, 'retMsg': 'OK', 'result': {'orderId': '1d2edbaa-1ef9-4283-84d6-438071bc7b37', 'orderLinkId': ''}, 'retExtInfo': {}, 'time': 1729252284315}\n",
-      "下單成功: Sell 0.001 BTCUSDT\n",
-      "Order puls Sell 2024-10-18 22:00:13.428675\n",
-      "下單成功: Sell 0.001 BTCUSDT\n",
-      "Order puls Sell 2024-10-18 22:09:38.817832\n",
-      "下單成功: Sell 0.001 BTCUSDT\n",
-      "平倉 {'retCode': 0, 'retMsg': 'OK', 'result': {'orderId': 'b464baf0-82ff-41aa-8af8-780da3a15bc3', 'orderLinkId': ''}, 'retExtInfo': {}, 'time': 1729260924046}\n",
-      "下單成功: Sell 0.001 BTCUSDT\n",
-      "Order puls Sell 2024-10-18 22:34:00.792055\n",
-      "下單成功: Sell 0.001 BTCUSDT\n",
-      "Order puls Sell 2024-10-18 23:30:56.592614\n",
-      "下單成功: Sell 0.001 BTCUSDT\n",
-      "Order puls Sell 2024-10-19 02:37:10.839408\n",
-      "下單成功: Sell 0.001 BTCUSDT\n",
-      "平倉 {'retCode': 0, 'retMsg': 'OK', 'result': {'orderId': '6382a8a6-6c00-46dc-88e1-45af10e9ac22', 'orderLinkId': ''}, 'retExtInfo': {}, 'time': 1729283916418}\n",
-      "下單成功: Sell 0.001 BTCUSDT\n",
-      "平倉 {'retCode': 0, 'retMsg': 'OK', 'result': {'orderId': '4fe86917-607d-49bc-b899-07125ce965cd', 'orderLinkId': ''}, 'retExtInfo': {}, 'time': 1729288375096}\n",
       "下單成功: Sell 0.001 BTCUSDT\n"
      ]
     }
@@ -238,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
