--- a/Kai_test.ipynb
+++ b/Kai_test.ipynb
@@ -19,6 +19,39 @@
     "   print(sys.executable)\n",
     "   print(sys.version)   "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "{'id': 5, 'timestamp': '2024-10-22T23:28:04.826243+08:00', 'strategy_name': 'Updated for test', 'current_position': 1000.0, 'profit_loss': 7.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"http://localhost:8000/api/strategy-info/5/\"\n",
+    "headers = {\n",
+    "    \"Content-Type\": \"application/json\",\n",
+    "    \"Authorization\": \"Token 5e5cf2ae2f7d2f86b3000bb63d65b87202fcc8c1\"\n",
+    "}\n",
+    "data = {\n",
+    "    \"strategy_name\": \"Updated for test\",\n",
+    "    \"current_position\": 1000.0,\n",
+    "    \"profit_loss\": 7.0\n",
+    "}\n",
+    "\n",
+    "response = requests.put(url, json=data, headers=headers)\n",
+    "print(response.status_code)\n",
+    "print(response.json())"
+   ]
   }
  ],
  "metadata": {
@@ -37,7 +70,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
